ros2_ws/log/build_2025-01-23_22-51-51/mypkg/stderr.log
  File "/home/koara/robosys2024-02.1/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/raneg.py", line 1
    mport rclpy
          ^
SyntaxError: invalid syntax

